# routers/router.go
@@ -30,6 +30,11 @@ func init() {
 				&controllers.MenuController{},
 			),
 		),
+		beego.NSNamespace("/category",
+			beego.NSInclude(
+				&controllers.CategoryController{},
+			),
+		),
 	)
 	beego.AddNamespace(ns)
 }
