# swagger/swagger.yml
@@ -11,6 +11,117 @@ info:
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 basePath: /v1
 paths:
+  /category/:
+    get:
+      tags:
+      - category
+      description: get Category
+      operationId: CategoryController.Get All
+      parameters:
+      - in: query
+        name: query
+        description: Filter. e.g. col1:v1,col2:v2 ...
+        type: string
+      - in: query
+        name: fields
+        description: Fields returned. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: sortby
+        description: Sorted-by fields. e.g. col1,col2 ...
+        type: string
+      - in: query
+        name: order
+        description: Order corresponding to each sortby field, if single value, apply
+          to all sortby fields. e.g. desc,asc ...
+        type: string
+      - in: query
+        name: limit
+        description: Limit the size of result set. Must be an integer
+        type: string
+      - in: query
+        name: offset
+        description: Start position of result set. Must be an integer
+        type: string
+      responses:
+        "200":
+          schema:
+            $ref: '#/definitions/models.Category'
+        "403": {}
+    post:
+      tags:
+      - category
+      description: create Category
+      operationId: CategoryController.Post
+      parameters:
+      - in: body
+        name: body
+        description: body for Category content
+        required: true
+        schema:
+          $ref: '#/definitions/models.Category'
+      responses:
+        "201":
+          description: '{int} models.Category'
+        "403":
+          description: body is empty
+  /category/{id}:
+    get:
+      tags:
+      - category
+      description: get Category by id
+      operationId: CategoryController.Get One
+      parameters:
+      - in: path
+        name: id
+        description: The key for staticblock
+        required: true
+        type: string
+      responses:
+        "200":
+          schema:
+            $ref: '#/definitions/models.Category'
+        "403":
+          description: :id is empty
+    put:
+      tags:
+      - category
+      description: update the Category
+      operationId: CategoryController.Put
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to update
+        required: true
+        type: string
+      - in: body
+        name: body
+        description: body for Category content
+        required: true
+        schema:
+          $ref: '#/definitions/models.Category'
+      responses:
+        "200":
+          schema:
+            $ref: '#/definitions/models.Category'
+        "403":
+          description: :id is not int
+    delete:
+      tags:
+      - category
+      description: delete the Category
+      operationId: CategoryController.Delete
+      parameters:
+      - in: path
+        name: id
+        description: The id you want to delete
+        required: true
+        type: string
+      responses:
+        "200":
+          description: '{string} delete success!'
+        "403":
+          description: id is empty
   /menu/:
     get:
       tags:
@@ -345,10 +456,30 @@ paths:
         "403":
           description: id is empty
 definitions:
+  .Time:
+    type: object
+  models.Category:
+    title: Category
+    type: object
+    properties:
+      Name:
+        type: string
+      created:
+        $ref: '#/definitions/time.Time'
+      fatherId:
+        type: integer
+        format: int64
+      id:
+        type: integer
+        format: int64
+      updated:
+        $ref: '#/definitions/time.Time'
   models.Menu:
     title: Menu
     type: object
     properties:
+      created:
+        $ref: '#/definitions/time.Time'
       id:
         type: integer
         format: int64
@@ -357,12 +488,16 @@ definitions:
       number:
         type: integer
         format: int64
+      pic:
+        type: string
       price:
         type: number
         format: double
       types:
         type: integer
         format: int64
+      updated:
+        $ref: '#/definitions/time.Time'
   models.Order:
     title: Order
     type: object
@@ -372,6 +507,8 @@ definitions:
       amount:
         type: number
         format: double
+      created:
+        $ref: '#/definitions/time.Time'
       discount:
         type: number
         format: double
@@ -389,6 +526,8 @@ definitions:
         format: int64
       remarks:
         type: string
+      updated:
+        $ref: '#/definitions/time.Time'
   models.User:
     title: User
     type: object
@@ -399,6 +538,8 @@ definitions:
         type: string
       city:
         type: string
+      created:
+        $ref: '#/definitions/time.Time'
       id:
         type: integer
         format: int64
@@ -413,6 +554,8 @@ definitions:
       sex:
         type: integer
         format: int64
+      updated:
+        $ref: '#/definitions/time.Time'
       username:
         type: string
 tags:
@@ -425,3 +568,6 @@ tags:
 - name: menu
   description: |2
      MenuController oprations for Menu
+- name: category
+  description: |2
+     CategoryController oprations for Category
